jasmine-karma-documentation/kubernetes-lessons/namespaces/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  selector:
    app: kubernetes-dashboard
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
