jasmine-karma-documentation/kubernetes-lessons/namespaces/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    name: dashboard-ingress
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
###
# To access to the Kubernetes Dashboard in the browser.
# Follow this path: C:\Windows\System32\drivers\etc\hosts
# Open the hosts file and add this line "127.0.0.1 dashboard.com" at the bottom of the file.
